# Simplify_Agent

./: .gitignore  README.md  pyproject.toml
notebooks/: testing_multi_graph.ipynb
src/: agent.py  config.py  main.py  model.py  state.py
