[project]
name = "simplify-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "asyncio>=4.0.0",
    "langchain>=1.0.7",
    "langchain-openai>=1.0.3",
    "langsmith>=0.4.43",
    "openai>=2.8.1",
    "pydantic>=2.12.4",
    "python-dotenv>=1.2.1",
]
